--- a/pmsb_web/conta/templates/conta/listardados.html
+++ b/pmsb_web/conta/templates/conta/listardados.html
@@ -1,19 +1,27 @@
 {% extends "dashboard/index.html" %} 
+
 {% block main %}
 
-    <form action="{% url 'user_edit' %}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
+
+    <!-- <form action="{% url 'dashboard' %}" method="POST" enctype="multipart/form-data" > -->
+        <!-- {% csrf_token %} -->
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
                     <div class="card mx-4">
                         <div class="card-body p-4">
-                            <h1 style="text-align: center;">Atualizar os Dados</h1>
+                            <h1 style="text-align: center;">Perfil</h1>
                             <p class="text-muted" style="text-align: center;"></p>
                                 {% if Erro %}
                                 <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
                                 {% endif %}
-                            {{ form.as_p }}
+                            <div class='form-control'>Nome: {{ user.first_name }} </div>
+                            <div class='form-control'>Sobrenome: {{ user.last_name }} </div>
+                            <div class='form-control'>Email: {{ user.email }} </div>
+                            <div class='form-control'>CPF: {{ user.cpf }} </div>
+                            <div class='form-control'>Departamento: {{ user.departamento|default:"Nenhum" }} </div>
+                            <div class='form-control'>Superior: {{ user.superior|default:"Nenhum" }} </div>
+                            <div class='form-control'>Cargo: {{ user.cargo|default:"Nenhum" }} </div>
                             
                     <!-- <div class="input-group mb-3">
                     <div class="input-group-prepend">
@@ -49,8 +57,8 @@
                     <input type="password" class="form-control" placeholder="Confirmar a senha">
                   </div> -->
                             <br>
-                            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Atualizar</button>
-
+                            <a  href="{% url 'user_edit'  %}" type="submit" class="btn btn-warning ">Atualizar Dados</a>
+                            <a  href="{% url 'dashboard' %}" type="submit" class="btn btn-primary " style="float: right;" >Voltar</a>
                         </div>
                         <!-- <div class="card-footer p-4">
                   <div class="row">
@@ -70,6 +78,7 @@
                 </div>
             </div>
         </div>
-    </form>
+    <!-- </form> -->
+
 
 {% endblock %}
