--- a/pmsb_web/conta/templates/conta/login.html
+++ b/pmsb_web/conta/templates/conta/login.html
@@ -7,14 +7,17 @@
 -->
 {% extends "conta/base.html" %}
 {% block body %}
-<form class="form-signin" action="{% url 'login' %}" method="POST">
+
+<body class="app flex-row align-items-center">
+<form action="{% url 'login' %}" method="POST">
   {% csrf_token %}
-  <body class="app flex-row align-items-center">
-      <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-md-8">
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-sm">
+                </div>
+            <div class="col-lg-8" style="text-align: center;">
               <div class="card-group">
-                <div class="card p-4">
+                <div class="card p-5">
                   <div class="card-body">
                     <h1>Login</h1>
                     <p class="text-muted">Entre no sistema</p>
@@ -52,19 +55,23 @@
                     </div>
                   </div>
                 </div>
-                <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+                <div class="card p-5 text-white bg-primary">
                   <div class="card-body text-center">
                     <div>
+                      
                       <p style="visibility: hidden;"> PRIMEIRO EASTER EGG PRIMEIRO EASTER EGG, PRIMEIRO EASTER EGG,PRIMEIRO EASTER EGG PRIMEIRO EASTER EGG</p>
                       <h2>Primeira vez?</h2>
-                      <a href="{% url 'registrar' %}"  class="btn btn-primary active mt-3">Criar Agora</a>
+                      <p> LOGO AQUI </p>
+                      <a href="{% url 'registrar' %}"  class="btn btn-primary active mt-3">Cadastre-se</a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="col-sm">
+              </div>
           </div>
         </div>
-  </body>
 </form>
+</body>
 {% endblock %}
