adequando os templates

--- a/pmsb_web/conta/static/css/style.css
+++ b/pmsb_web/conta/static/css/style.css
@@ -14246,4 +14246,9 @@ body {
   breakpoint-lg: 992px;
   breakpoint-xl: 1200px;
 }
+
+
+.helptext {
+  color: #73818f;
+}
 /*# sourceMappingURL=style.css.map */
