--- a/pmsb_web/conta/templates/conta/base.html
+++ b/pmsb_web/conta/templates/conta/base.html
@@ -27,6 +27,7 @@
     <script src="{% static 'node_modules/popper.js/dist/umd/popper.min.js' %}"></script>
     <script src="{% static 'node_modules/bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'node_modules/pace-progress/pace.min.js' %}"></script>
+    <script src="{% static 'js/jquery.mask.js' %}"></script>
     <script src="{% static 'node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js' %}"></script>
     <script src="{% static 'node_modules/coreui/coreui/dist/js/coreui.min.js' %}"></script>
 </html>
