--- a/pmsb_web/conta/templates/conta/listardados.html
+++ b/pmsb_web/conta/templates/conta/listardados.html
@@ -15,13 +15,16 @@
                                 {% if Erro %}
                                 <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
                                 {% endif %}
-                            <div class='form-control'>Nome: {{ user.first_name }} </div>
-                            <div class='form-control'>Sobrenome: {{ user.last_name }} </div>
+
+                            
+                            <div class='form-control'>Nome Completo: {{ user.first_name }} </div>
+                            <div class='form-control'>Nome Projeto: {{ user.last_name }} </div>
                             <div class='form-control'>Email: {{ user.email }} </div>
-                            <div class='form-control'>CPF: {{ user.cpf }} </div>
                             <div class='form-control'>Departamento: {{ user.departamento|default:"Nenhum" }} </div>
                             <div class='form-control'>Superior: {{ user.superior|default:"Nenhum" }} </div>
                             <div class='form-control'>Cargo: {{ user.cargo|default:"Nenhum" }} </div>
+                            <div class='form-control' id='phone_with_ddd_fixo' >Telefone celular:  <a class='phone_with_ddd -mask'> {{ user.telefone_celular }} </a> </div>
+                            <div class='form-control' id='phone_with_ddd_fixo' >Telefone fixo:  <a class='phone_with_ddd -mask'> {{ user.telefone_fixo }} </a> </div>
                             
                     <!-- <div class="input-group mb-3">
                     <div class="input-group-prepend">
