--- a/pmsb_web/conta/templates/conta/registrar.html
+++ b/pmsb_web/conta/templates/conta/registrar.html
@@ -1,14 +1,14 @@
 {% extends 'conta/base.html' %} {% block body %}
-<script type="text/javascript" >
-    
+<script type="text/javascript">
+
     function limpa_formulário_cep() {
-            //Limpa valores do formulário de cep.
-            // document.getElementById('rua').value=("");
-            // document.getElementById('bairro').value=("");
-            document.getElementById('cidade').value=("");
-            document.getElementById('endereco').value=("");
-            document.getElementById('uf').value=("");
-            //document.getElementById('ibge').value=("");
+        //Limpa valores do formulário de cep.
+        // document.getElementById('rua').value=("");
+        // document.getElementById('bairro').value=("");
+        document.getElementById('cidade').value = ("");
+        document.getElementById('endereco').value = ("");
+        document.getElementById('uf').value = ("");
+        //document.getElementById('ibge').value=("");
     }
 
     function meu_callback(conteudo) {
@@ -16,9 +16,9 @@
             //Atualiza os campos com os valores.
             //document.getElementById('rua').value=(conteudo.logradouro);
             console.log(conteudo);
-            document.getElementById('endereco').value=( conteudo.bairro+', '+conteudo.logradouro);
-            document.getElementById('cidade').value=(conteudo.localidade);
-            document.getElementById('uf').value=(conteudo.uf);
+            document.getElementById('endereco').value = (conteudo.bairro + ', ' + conteudo.logradouro);
+            document.getElementById('cidade').value = (conteudo.localidade);
+            document.getElementById('uf').value = (conteudo.uf);
             //document.getElementById('ibge').value=(conteudo.ibge);
         } //end if.
         else {
@@ -27,7 +27,7 @@
             alert("CEP não encontrado.");
         }
     }
-        
+
     function pesquisacep(valor) {
 
         //Nova variável "cep" somente com dígitos.
@@ -40,21 +40,21 @@
             var validacep = /^[0-9]{8}$/;
 
             //Valida o formato do CEP.
-            if(validacep.test(cep)) {
+            if (validacep.test(cep)) {
 
                 //Preenche os campos com "..." enquanto consulta webservice.
                 //document.getElementById('rua').value="...";
                 //document.getElementById('bairro').value="...";
-                document.getElementById('cidade').value="...";
-                document.getElementById('uf').value="...";
-                document.getElementById('endereco').value="...";
+                document.getElementById('cidade').value = "...";
+                document.getElementById('uf').value = "...";
+                document.getElementById('endereco').value = "...";
                 //document.getElementById('ibge').value="...";
 
                 //Cria um elemento javascript.
                 var script = document.createElement('script');
 
                 //Sincroniza com o callback.
-                script.src = 'https://viacep.com.br/ws/'+ cep + '/json/?callback=meu_callback';
+                script.src = 'https://viacep.com.br/ws/' + cep + '/json/?callback=meu_callback';
 
                 //Insere script no documento e carrega o conteúdo.
                 document.body.appendChild(script);
@@ -72,25 +72,23 @@
         }
     };
 
-    </script>
+</script>
 
 <body style="margin-top: 25px">
-    <form action="{% url 'registrar' %}" method="POST" enctype="multipart/form-data" >
+    <form action="{% url 'registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <div class="card mx-4">
                         <div class="card-body p-4">
-                            <h1 style="text-align: center;">Registrar</h1>
-                            <p class="text-muted" style="text-align: center;">Crie a sua conta
-                                <br> Campos necessários * </p>
-                                {% if Erro %}
-                                <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
-                                {% endif %}
-                            {{ formulario_User }}
-                            
-                    <!-- <div class="input-group mb-3">
+                            <h1 style="text-align: center;">Cadastro para acesso ao projeto</h1>
+                            <p class="text-muted" style="text-align: center;">Crie a sua conta</p>
+                            {% if Erro %}
+                            <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
+                            {% endif %} {{ formulario_User.as_p }}
+
+                            <!-- <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text">
                         <i class="icon-user">*</i>
@@ -124,7 +122,7 @@
                     <input type="password" class="form-control" placeholder="Confirmar a senha">
                   </div> -->
                             <br>
-                            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Registrar</button>
+                            <button type="submit" id='myForm' class="btn btn-lg btn-block btn-outline-primary">**Enviar dados para análise**</button>
 
                         </div>
                         <!-- <div class="card-footer p-4">
@@ -148,4 +146,9 @@
     </form>
 </body>
 
-{% endblock %}
+<script>
+    function remover_mascaras(form)
+    {    
+    $(form).find(':input[class*="-mask"]').unmask();
+    }
+</script> {% endblock %}
