--- a/pmsb_web/conta/templates/conta/atualizar.html
+++ b/pmsb_web/conta/templates/conta/atualizar.html
@@ -1,7 +1,7 @@
 {% extends "dashboard/index.html" %} 
 {% block main %}
 
-    <form action="{% url 'user_edit' %}" method="POST" enctype="multipart/form-data">
+    <form action="{% url 'user_edit' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="container">
             <div class="row justify-content-center">
@@ -71,5 +71,10 @@
             </div>
         </div>
     </form>
-
+    <script>
+        function remover_mascaras(form)
+        {    
+        $(form).find(':input[class*="-mask"]').unmask();
+        }
+    </script>
 {% endblock %}
