--- a/pmsb_web/conta/templates/conta/login.html
+++ b/pmsb_web/conta/templates/conta/login.html
@@ -5,73 +5,80 @@
 * Copyright (c) 2018 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
 -->
-{% extends "conta/base.html" %}
-{% block body %}
+{% extends "conta/base.html" %} {% block body %}
 
-<body class="app flex-row align-items-center">
-<form action="{% url 'login' %}" method="POST">
-  {% csrf_token %}
-      <div class="container-fluid">
-          <div class="row">
-              <div class="col-sm">
+<body class="container">
+  <form action="{% url 'login' %}" method="POST">
+    {% csrf_token %}
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+        </div>
+        <div class="col-sm-6" style="text-align: left;">
+          <div class="card-group">
+            <div class="card p-5">
+              <div class="card-body">
+                <h1>Já cadastrado ?</h1>
+                <h2>Acesse informando.</h2>
+                <!-- <p class="text-muted">Entre no sistema</p> -->
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">
+                      <i class="icon-user"></i>
+                    </span>
+                  </div>
+                  <input type="text" name="username" class="form-control" placeholder="CPF" required>
+
                 </div>
-            <div class="col-lg-8" style="text-align: center;">
-              <div class="card-group">
-                <div class="card p-5">
-                  <div class="card-body">
-                    <h1>Login</h1>
-                    <p class="text-muted">Entre no sistema</p>
-                    <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text">
-                          <i class="icon-user"></i>
-                        </span>
-                      </div>
-                      <input type="text" name="username" class="form-control" placeholder="Usuário" required >
-                      
-                    </div>
-                    <div class="input-group mb-4">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text">
-                          <i class="icon-lock"></i>
-                        </span>
-                      </div>
-                      <input type="password" name="password" class="form-control" placeholder="Senha" required >
-                    </div>
-                    {% if erro %}
-                    <div class="input-group mb-3">
-                        <div class="col-8 text-left" style="color: red;" >
-                          Senha/usuário incorretos.
-                        </div>
-                    </div>
-                    {% endif %}
-                    <div class="row">
-                      <div class="col-6">
-                        <button type="submit" class="btn btn-primary px-4">Entrar</button>
-                      </div>
-                      <div class="col-6 text-right">
-                        <button type="button" class="btn btn-link px-0">Esqueceu a senha?</button>
-                      </div>
-                    </div>
+                <div class="input-group mb-4">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">
+                      <i class="icon-lock"></i>
+                    </span>
+                  </div>
+                  <input type="password" name="password" class="form-control" placeholder="Senha" required>
+                </div>
+                {% if erro %}
+                <div class="input-group mb-3">
+                  <div class="col-8 text-left" style="color: red;">
+                    Senha/usuário incorretos.
                   </div>
                 </div>
-                <div class="card p-5 text-white bg-primary">
-                  <div class="card-body text-center">
-                    <div>
-                      
-                      <p style="visibility: hidden;"> PRIMEIRO EASTER EGG PRIMEIRO EASTER EGG, PRIMEIRO EASTER EGG,PRIMEIRO EASTER EGG PRIMEIRO EASTER EGG</p>
-                      <h2>Primeira vez?</h2>
-                      <p> LOGO AQUI </p>
-                      <a href="{% url 'registrar' %}"  class="btn btn-primary active mt-3">Cadastre-se</a>
-                    </div>
+                {% endif %}
+                <div class="row">
+                  <div class="col-6">
+                    <button type="submit" class="btn btn-primary px-4">Entrar</button>
                   </div>
+                  <div class="col-6 text-right">
+                    <button type="button" class="btn btn-link px-0">Esqueceu a senha?</button>
+                  </div>
+                </div>
+                <div class="row">
+                   
+                  <div class="col-12" style="margin-top: 5px;">
+                  <a href="{% url 'registrar' %}" class="btn btn-secondary btn-lg btn-block" role="button"> <span class="hidden-xs">Cadastre-se aqui.</span></a>
+                  </div>
+                  
                 </div>
               </div>
             </div>
-            <div class="col-sm">
+            <!-- <div class="card p-5 text-white bg-primary">
+              <div class="card-body text-center">
+                <div>
+
+                  <p style="visibility: hidden;"> PRIMEIRO EASTER EGG PRIMEIRO EASTER EGG, PRIMEIRO EASTER EGG,PRIMEIRO EASTER EGG PRIMEIRO EASTER EGG</p>
+                  <h2>Primeira vez?</h2>
+                  <p> LOGO AQUI </p>
+                  <a href="{% url 'registrar' %}" class="btn btn-primary active mt-3">Cadastre-se</a>
+                </div>
               </div>
+            </div> -->
           </div>
         </div>
-</form>
+        <div class="col-sm-3">
+        </div>
+      </div>
+    </div>
+  </form>
 </body>
 {% endblock %}
