--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -99,24 +99,24 @@
 
           <li class="nav-item nav-dropdown open">
             <a class="nav-link nav-dropdown-toggle" href="#">
-              <i class="nav-icon icon-list"></i> Menu 01</a>
+              <i class="nav-icon icon-list"></i>Conta</a>
             <ul class="nav-dropdown-items">
               <li class="nav-item">
-                <a class="nav-link" href="base/tabs.html">
-                  <i class="nav-icon icon-settings"></i> aaaa</a>
+                <a class="nav-link" href="{% url 'user_dados' %}">
+                  <i class="nav-icon icon-user"></i>Perfil</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="base/tooltips.html">
                   <i class="nav-icon icon-settings"></i> bbbb</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="base/tooltips.html">
                   <i class="nav-icon icon-settings"></i> cccc</a>
-              </li>
+              </li> -->
             </ul>
           </li>
 
-          <li class="nav-item nav-dropdown open">
+          <!-- <li class="nav-item nav-dropdown open">
             <a class="nav-link nav-dropdown-toggle" href="#">
               <i class="nav-icon icon-list"></i> Menu 02</a>
             <ul class="nav-dropdown-items">
@@ -133,7 +133,7 @@
                   <i class="nav-icon icon-settings"></i> cccc</a>
               </li>
             </ul>
-          </li>
+          </li> -->
 
         </ul>
 
