--- a/pmsb_web/conta/templates/conta/registrar.html
+++ b/pmsb_web/conta/templates/conta/registrar.html
@@ -1,4 +1,11 @@
-{% extends 'conta/base.html' %} {% block body %}
+{% extends 'conta/base.html' %}
+
+
+{% block body %}
+<body class='disney'>
+        <header class="header1">
+        </header>
+    </body>
 <script type="text/javascript">
 
     function limpa_formulário_cep() {
@@ -74,21 +81,20 @@
 
 </script>
 
-<body style="margin-top: 25px">
-    <form action="{% url 'registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="card mx-4">
-                        <div class="card-body p-4">
-                            <h1 style="text-align: center;">Cadastro para acesso ao projeto</h1>
-                            <p class="text-muted" style="text-align: center;">Crie a sua conta</p>
-                            {% if Erro %}
-                            <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
-                            {% endif %} {{ formulario_User.as_p }}
+<form action="{% url 'registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card mx-4">
+                    <div class="card-body p-4">
+                        <h1 style="text-align: center;">Cadastro para acesso ao projeto</h1>
+                        <p class="text-muted" style="text-align: center;">Crie a sua conta</p>
+                        {% if Erro %}
+                        <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
+                        {% endif %} {{ formulario_User.as_p }}
 
-                            <!-- <div class="input-group mb-3">
+                        <!-- <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text">
                         <i class="icon-user">*</i>
@@ -121,11 +127,10 @@
                     </div>
                     <input type="password" class="form-control" placeholder="Confirmar a senha">
                   </div> -->
-                            <br>
-                            <button type="submit" id='myForm' class="btn btn-lg btn-block btn-outline-primary">**Enviar dados para análise**</button>
-
-                        </div>
-                        <!-- <div class="card-footer p-4">
+                        <br>
+                        <button type="submit" id='myForm' class="btn btn-lg btn-block btn-outline-primary">Enviar dados para análise</button>
+                    </div>
+                    <!-- <div class="card-footer p-4">
                   <div class="row">
                     <div class="col-6">
                       <button class="btn btn-block btn-facebook" type="button">
@@ -139,16 +144,13 @@
                     </div>
                   </div>
                 </div> -->
-                    </div>
                 </div>
             </div>
         </div>
-    </form>
-</body>
-
+    </div>
+</form>
 <script>
-    function remover_mascaras(form)
-    {    
-    $(form).find(':input[class*="-mask"]').unmask();
+    function remover_mascaras(form) {
+        $(form).find(':input[class*="-mask"]').unmask();
     }
 </script> {% endblock %}
