adicionando tag required no forms e resize no logo default

--- a/pmsb_web/conta/templates/conta/base.html
+++ b/pmsb_web/conta/templates/conta/base.html
@@ -19,10 +19,10 @@
   <!-- Main styles for this application-->
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
   <link href="{% static 'vendors/pace-progress/css/pace.min.css' %}" rel="stylesheet">
-  
 </head>
 
-{% block body %} {% endblock %}
+{% block body %} 
+{% endblock %}
 
 <script src="{% static 'node_modules/jquery/dist/jquery.min.js' %}"></script>
 <script src="{% static 'node_modules/popper.js/dist/umd/popper.min.js' %}"></script>
