views/forms atualizandos
-fluidez no update user feito -brand no login/register diminuida, imagem como backgroud no header feito

--- a/pmsb_web/conta/templates/conta/base.html
+++ b/pmsb_web/conta/templates/conta/base.html
@@ -21,8 +21,7 @@
   <link href="{% static 'vendors/pace-progress/css/pace.min.css' %}" rel="stylesheet">
 </head>
 
-{% block body %} 
-{% endblock %}
+{% block body %} {% endblock %}
 
 <script src="{% static 'node_modules/jquery/dist/jquery.min.js' %}"></script>
 <script src="{% static 'node_modules/popper.js/dist/umd/popper.min.js' %}"></script>
