--- a/pmsb_web/conta/templates/conta/login.html
+++ b/pmsb_web/conta/templates/conta/login.html
@@ -12,9 +12,9 @@
       <div class="row">
         <div class="col-sm-3">
         </div>
-        <div class="col-sm-6" style="text-align: left;">
+        <div class="col-sm-6" style="text-align: left; margin-bottom: 10px;">
           <div class="card-group">
-            <div class="card p-5">
+            <div class="card p-1">
               <div class="card-body">
                 <h1>Já cadastrado ?</h1>
                 <h2>Acesse informando.</h2>
@@ -54,7 +54,7 @@
                 <div class="row">
 
                   <div class="col-12" style="margin-top: 5px;">
-                    <a href="{% url 'registrar' %}" class="btn btn-secondary btn-lg btn-block" role="button">
+                    <a href="{% url 'registrar' %}" class="btn btn-secondary btn-lg btn-block px-0" role="button">
                       <span class="hidden-xs">Primeiro acesso? Cadastre-se aqui.</span>
                     </a>
                   </div>
@@ -75,8 +75,7 @@
             </div> -->
           </div>
         </div>
-        <div class="col-sm-3">
-        </div>
+        
       </div>
     </div>
   </form>
