--- a/pmsb_web/conta/templates/conta/registrar.html
+++ b/pmsb_web/conta/templates/conta/registrar.html
@@ -1,7 +1,7 @@
 {% extends 'conta/base.html' %} {% block body %}
 
 <body class='container'>
-    <header class="header1">
+    <header class="header1" style="width: 59%;">
     </header>
 
     <form action="{% url 'registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
