--- a/pmsb_web/conta/static/css/style.css
+++ b/pmsb_web/conta/static/css/style.css
@@ -14241,8 +14241,20 @@ body {
 .header1 {
   background: url(../../../media/LOGO.jpg) no-repeat center;
   background-size:cover;
+  display: block;
+  height: 250px; 
+  width: 47%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  float: center;
+}
+
+header{
+  background: url(../../../media/LOGO.jpg) no-repeat center;
+  background-size:cover;
   height: 350px; 
-  margin-bottom: 5px
 }
 
 .helptext {
