--- a/pmsb_web/conta/templates/conta/atualizar.html
+++ b/pmsb_web/conta/templates/conta/atualizar.html
@@ -3,7 +3,7 @@
 
     <form action="{% url 'user_edit' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        <div class="container">
+        <div class="container" style="margin-top: 10px">
             <div class="row justify-content-center">
                 <div class="col-md-10">
                     <div class="card mx-4">
@@ -14,7 +14,6 @@
                                 <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
                                 {% endif %}
                             {{ form.as_p }}
-                            
                     <!-- <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text">
@@ -49,8 +48,8 @@
                     <input type="password" class="form-control" placeholder="Confirmar a senha">
                   </div> -->
                             <br>
-                            <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Atualizar</button>
-
+                            <button type="submit" class="btn btn-warning ">Atualizar Dados</button>
+                            <button  href="{% url 'user_dados' %}" type="submit" class="btn btn-primary " style="float: right;" >Voltar</button>
                         </div>
                         <!-- <div class="card-footer p-4">
                   <div class="row">
