--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -1,14 +1,13 @@
 {% extends "conta/base.html" %} {% block body %}
 
 <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
-  <header class="app-header navbar">
+  <header class="app-header navbar" >
     <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">
-      <img class="navbar-brand-full" src="img/brand/logo.svg" width="89" height="25" alt="Logo">
-      <img class="navbar-brand-minimized" src="img/brand/sygnet.svg" width="30" height="30" alt="Logo">
-    </a>
+    <!-- <a class="navbar-brand" href="#">
+      <img class="navbar-brand-full"  width="100" height="100" alt="Logo">
+    </a> -->
     <!-- <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
             <span class="navbar-toggler-icon"></span>
           </button> -->
@@ -43,19 +42,15 @@
                 
         <div class="dropdown-menu dropdown-menu-right">
           <div class="dropdown-header text-center">
-            <strong>Conta</strong>
+            <strong>Usuário</strong>
           </div>
-          <a class="dropdown-item" href="#">
-            <i class="fa fa-bell-o"></i> Notificações
-            <span class="badge badge-info">42</span>
+          <a class="dropdown-item" href="{% url 'user_dados'  %}">
+            <i class="fa icon-user"></i> Conta
+            <!-- <span class="badge badge-info">42</span> -->
           </a>
-          <!-- <a class="dropdown-item" href="#">
-                  <i class="fa fa-envelope-o"></i> 
-                  <span class="badge badge-success">42</span>
-                </a> -->
           <a class="dropdown-item" href="#">
-            <i class="fa fa-tasks"></i> Atividades
-            <span class="badge badge-danger">42</span>
+            <i class="fa icon-user"></i> Perfil
+            <!-- <span class="badge badge-danger">42</span> -->
           </a>
           <!-- <a class="dropdown-item" href="#">
                   <i class="fa fa-comments"></i> Comments
@@ -64,8 +59,6 @@
           <div class="dropdown-header text-center">
             <strong>Configurações</strong>
           </div>
-          <a class="dropdown-item" href="{% url 'user_dados'  %}">
-            <i class="fa fa-user"></i> Perfil</a>
           <!-- <a class="dropdown-item" href="#">
                   <i class="fa fa-wrench"></i> Settings</a> -->
           <!-- <a class="dropdown-item" href="#">
@@ -99,11 +92,11 @@
 
           <li class="nav-item nav-dropdown open">
             <a class="nav-link nav-dropdown-toggle" href="#">
-              <i class="nav-icon icon-list"></i>Conta</a>
+              <i class="nav-icon icon-list"></i>Menu 01</a>
             <ul class="nav-dropdown-items">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_dados' %}">
-                  <i class="nav-icon icon-user"></i>Perfil</a>
+                <a class="nav-link" href="#">
+                  <i class="nav-icon icon-user"></i>Funcao 01</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="base/tooltips.html">
@@ -141,27 +134,7 @@
     </div>
     <main class="main">
 
-      <ol class="breadcrumb">
-        <div class="row">
-          <ul>
-            <li class="list-group">Plano Municipal de Saneamento Básico (Abastacimento, Esgotamento Sanitário, Resíduos Sólidos, Saúde Ambiental) </li>
-            <li class="list-group">Estado do Tocantins - Funasa-TO, UFT, FAPTO </li>
-            <li class="list-group">Olá Sr {{user.first_name}}. Hoje são {{ time }}</li>
-          </ul>
-        </div>
-
-        <li class="breadcrumb-menu d-md-down-none">
-          <div class="btn-group" role="group" aria-label="Button group">
-            <a class="btn" href="#">
-              <i class="icon-speech"></i>Mensagens
-            </a>
-            <a class="btn" href="./">
-              <i class="icon-graph"></i>Atividades</a>
-            <a class="btn" href="#">
-              <i class="icon-settings"></i>Configurações</a>
-          </div>
-        </li>
-      </ol>
+      
       <div class="container-fluid">
         <div class="animated fadeIn">
             {% block main %}
