--- a/pmsb_web/conta/templates/conta/atualizar.html
+++ b/pmsb_web/conta/templates/conta/atualizar.html
@@ -1,79 +1,23 @@
-{% extends "dashboard/index.html" %} 
-{% block main %}
-
-    <form action="{% url 'user_edit' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="container" style="margin-top: 10px">
-            <div class="row justify-content-center">
-                <div class="col-md-10">
-                    <div class="card mx-4">
-                        <div class="card-body p-4">
-                            <h1 style="text-align: center;">Atualizar os Dados</h1>
-                            <p class="text-muted" style="text-align: center;"></p>
-                                {% if Erro %}
-                                <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
-                                {% endif %}
-                            {{ form.as_p }}
-                    <!-- <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="icon-user">*</i>
-                      </span>
-                    </div>
-                    <input type="text" class="form-control" placeholder="Usuário">
-                  </div>
-    
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">@*</span>
-                    </div>
-                    <input type="text" class="form-control" placeholder="Email">
-                  </div>
-    
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="icon-lock">*</i>
-                      </span>
-                    </div>
-                    <input type="password" class="form-control" placeholder="Senha">
-                  </div>
-    
-                  <div class="input-group mb-4">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="icon-lock">*</i>
-                      </span>
-                    </div>
-                    <input type="password" class="form-control" placeholder="Confirmar a senha">
-                  </div> -->
-                            <br>
-                            <button type="submit" class="btn btn-warning ">Atualizar Dados</button>
-                            <button  href="{% url 'user_dados' %}" type="submit" class="btn btn-primary " style="float: right;" >Voltar</button>
-                        </div>
-                        <!-- <div class="card-footer p-4">
-                  <div class="row">
-                    <div class="col-6">
-                      <button class="btn btn-block btn-facebook" type="button">
-                        <span>facebook</span>
-                      </button>
-                    </div>
-                    <div class="col-6">
-                      <button class="btn btn-block btn-twitter" type="button">
-                        <span>twitter</span>
-                      </button>
-                    </div>
-                  </div>
-                </div> -->
-                    </div>
-                </div>
-            </div>
+{% extends "dashboard/index.html" %} {% block main %}
+<form action="{% url 'user_edit' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
+  {% csrf_token %}
+  <div class="container" style="margin-top: 10px">
+    <div class="row justify-content-center">
+      <div class="col-md-10">
+        <div class="card mx-4">
+          <div class="card-body p-4">
+            <h1 style="text-align: center;">Atualizar os Dados</h1>
+            <p class="text-muted" style="text-align: center;"></p>
+            {% if Erro %}
+            <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
+            {% endif %} {{ form.as_p }}
+            <br>
+            <button type="submit" class="btn btn-warning ">Atualizar Dados</button>
+            <button href="{% url 'user_dados' %}" type="submit" class="btn btn-primary " style="float: right;">Voltar</button>
+          </div>
         </div>
-    </form>
-    <script>
-        function remover_mascaras(form)
-        {    
-        $(form).find(':input[class*="-mask"]').unmask();
-        }
-    </script>
+      </div>
+    </div>
+  </div>
+</form>
 {% endblock %}
