--- a/pmsb_web/conta/templates/conta/base.html
+++ b/pmsb_web/conta/templates/conta/base.html
@@ -1,8 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-
 <html lang="pt-br">
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +18,6 @@
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
   <link href="{% static 'vendors/pace-progress/css/pace.min.css' %}" rel="stylesheet">
 </head>
-
 {% block body %} {% endblock %}
 
 <script src="{% static 'node_modules/jquery/dist/jquery.min.js' %}"></script>
@@ -30,5 +27,9 @@
 <script src="{% static 'js/jquery.mask.js' %}"></script>
 <script src="{% static 'node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js' %}"></script>
 <script src="{% static 'node_modules/coreui/coreui/dist/js/coreui.min.js' %}"></script>
-
+<script>
+    function remover_mascaras(form) {
+        $(form).find(':input[class*="-mask"]').unmask();
+    }
+</script>
 </html>
