--- a/pmsb_web/conta/templates/conta/login.html
+++ b/pmsb_web/conta/templates/conta/login.html
@@ -1,32 +1,27 @@
 {% extends "conta/base.html" %} 
 {% block body %}
-
-
-
 <body class="container">
     <header class="header1">
       </header>
-  <form action="{% url 'login' %}" method="POST">
+  <form action="{% url 'login' %}" onsubmit="remover_mascaras(this)" method="POST">
     {% csrf_token %}
     <div class="container">
       <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-4">
         </div>
-        <div class="col-sm-6" style="text-align: left; margin-bottom: 10px;">
+        <div class="col-sm-5" style="text-align: left; margin-bottom: 10px;">
           <div class="card-group">
             <div class="card p-1">
               <div class="card-body">
                 <h1>Já cadastrado ?</h1>
                 <h2>Acesse informando.</h2>
-                <!-- <p class="text-muted">Entre no sistema</p> -->
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text">
                       <i class="icon-user"></i>
                     </span>
                   </div>
-                  <input type="text" name="username" class="form-control" placeholder="CPF" required>
-
+                  <input type="text" name="username" id="cpf" class="form-control cpf -mask" placeholder="CPF" required>
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
@@ -52,30 +47,16 @@
                   </div>
                 </div>
                 <div class="row">
-
                   <div class="col-12" style="margin-top: 5px;">
                     <a href="{% url 'registrar' %}" class="btn btn-secondary btn-lg btn-block px-0" role="button">
                       <span class="hidden-xs">Primeiro acesso? Cadastre-se aqui.</span>
                     </a>
                   </div>
-
                 </div>
               </div>
             </div>
-            <!-- <div class="card p-5 text-white bg-primary">
-              <div class="card-body text-center">
-                <div>
-
-                  <p style="visibility: hidden;"> PRIMEIRO EASTER EGG PRIMEIRO EASTER EGG, PRIMEIRO EASTER EGG,PRIMEIRO EASTER EGG PRIMEIRO EASTER EGG</p>
-                  <h2>Primeira vez?</h2>
-                  <p> LOGO AQUI </p>
-                  <a href="{% url 'registrar' %}" class="btn btn-primary active mt-3">Cadastre-se</a>
-                </div>
-              </div>
-            </div> -->
           </div>
         </div>
-        
       </div>
     </div>
   </form>
