--- a/pmsb_web/conta/templates/conta/registrar.html
+++ b/pmsb_web/conta/templates/conta/registrar.html
@@ -1,9 +1,7 @@
 {% extends 'conta/base.html' %} {% block body %}
-
 <body class='container'>
-    <header class="header1" style="width: 59%;">
+    <header class="header1" style="width: 59%; margin-left: auto;">
     </header>
-
     <form action="{% url 'registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="container">
@@ -16,65 +14,13 @@
                             {% if Erro %}
                             <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
                             {% endif %} {{ formulario_User.as_p }}
-
-                            <!-- <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="icon-user">*</i>
-                      </span>
-                    </div>
-                    <input type="text" class="form-control" placeholder="Usuário">
-                  </div>
-    
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">@*</span>
-                    </div>
-                    <input type="text" class="form-control" placeholder="Email">
-                  </div>
-    
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="icon-lock">*</i>
-                      </span>
-                    </div>
-                    <input type="password" class="form-control" placeholder="Senha">
-                  </div>
-    
-                  <div class="input-group mb-4">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <i class="icon-lock">*</i>
-                      </span>
-                    </div>
-                    <input type="password" class="form-control" placeholder="Confirmar a senha">
-                  </div> -->
                             <br>
                             <button type="submit" id='myForm' class="btn btn-lg btn-block btn-outline-primary">Enviar dados para análise</button>
                         </div>
-                        <!-- <div class="card-footer p-4">
-                  <div class="row">
-                    <div class="col-6">
-                      <button class="btn btn-block btn-facebook" type="button">
-                        <span>facebook</span>
-                      </button>
-                    </div>
-                    <div class="col-6">
-                      <button class="btn btn-block btn-twitter" type="button">
-                        <span>twitter</span>
-                      </button>
-                    </div>
-                  </div>
-                </div> -->
                     </div>
                 </div>
             </div>
         </div>
     </form>
 </body>
-<script>
-    function remover_mascaras(form) {
-        $(form).find(':input[class*="-mask"]').unmask();
-    }
-</script> {% endblock %}
+{% endblock %}
