--- a/pmsb_web/conta/templates/conta/base.html
+++ b/pmsb_web/conta/templates/conta/base.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta name="description" content="PMSB">
-  <meta name="author" content="">
+  <meta name="author" content="PMSB dev Team">
   <meta name="keyword" content="">
   <title>PMSB</title>
   <!-- Icons-->
@@ -18,6 +18,7 @@
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
   <link href="{% static 'vendors/pace-progress/css/pace.min.css' %}" rel="stylesheet">
 </head>
+
 {% block body %} {% endblock %}
 
 <script src="{% static 'node_modules/jquery/dist/jquery.min.js' %}"></script>
@@ -32,4 +33,6 @@
         $(form).find(':input[class*="-mask"]').unmask();
     }
 </script>
+
+</body>
 </html>
