--- a/pmsb_web/conta/templates/conta/login.html
+++ b/pmsb_web/conta/templates/conta/login.html
@@ -1,56 +1,55 @@
-{% extends "conta/base.html" %} 
-{% block body %}
-<body class="container">
-    <header class="header1">
-      </header>
-  <form action="{% url 'login' %}" onsubmit="remover_mascaras(this)" method="POST">
-    {% csrf_token %}
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-        </div>
-        <div class="col-sm-5" style="text-align: left; margin-bottom: 10px;">
-          <div class="card-group">
-            <div class="card p-1">
-              <div class="card-body">
-                <h1>Já cadastrado ?</h1>
-                <h2>Acesse informando.</h2>
-                <div class="input-group mb-3">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">
-                      <i class="icon-user"></i>
-                    </span>
+{% extends "conta/base.html" %} {% block body %}
+
+
+<body class="app flex-row align-items-center fullscreen_bg">
+  <div class="container">
+    <form action="{% url 'login' %}" onsubmit="remover_mascaras(this)" method="POST">
+      {% csrf_token %}
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-4" style="text-align: left;">
+            <div class="card-group">
+              <div class="card p-1">
+                <div class="card-body">
+                  <h1>Já cadastrado ?</h1>
+                  <h2>Acesse informando.</h2>
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="icon-user"></i>
+                      </span>
+                    </div>
+                    <input type="text" name="username" id="cpf" class="form-control cpf -mask" placeholder="CPF" required>
                   </div>
-                  <input type="text" name="username" id="cpf" class="form-control cpf -mask" placeholder="CPF" required>
-                </div>
-                <div class="input-group mb-4">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">
-                      <i class="icon-lock"></i>
-                    </span>
+                  <div class="input-group mb-4">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="icon-lock"></i>
+                      </span>
+                    </div>
+                    <input type="password" name="password" class="form-control" placeholder="Senha" required>
                   </div>
-                  <input type="password" name="password" class="form-control" placeholder="Senha" required>
-                </div>
-                {% if erro %}
-                <div class="input-group mb-3">
-                  <div class="col-8 text-left" style="color: red;">
-                    Senha/usuário incorretos.
+                  {% if erro %}
+                  <div class="input-group mb-3">
+                    <div class="col-8 text-left" style="color: red;">
+                      Senha/usuário incorretos.
+                    </div>
                   </div>
-                </div>
-                {% endif %}
-                <div class="row">
-                  <div class="col-6">
-                    <button type="submit" class="btn btn-primary px-4">Entrar</button>
+                  {% endif %}
+                  <div class="row">
+                    <div class="col-6">
+                      <button type="submit" class="btn btn-primary px-4">Entrar</button>
+                    </div>
+                    <div class="col-6 text-right">
+                      <button type="button" class="btn btn-link px-0">Esqueceu a senha?</button>
+                    </div>
                   </div>
-                  <div class="col-6 text-right">
-                    <button type="button" class="btn btn-link px-0">Esqueceu a senha?</button>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12" style="margin-top: 5px;">
-                    <a href="{% url 'registrar' %}" class="btn btn-secondary btn-lg btn-block px-0" role="button">
-                      <span class="hidden-xs">Primeiro acesso? Cadastre-se aqui.</span>
-                    </a>
+                  <div class="row">
+                    <div class="col-12" style="margin-top: 5px;">
+                      <a href="{% url 'registrar' %}" class="btn btn-secondary btn-lg btn-block px-0" role="button">
+                        <span class="hidden-xs">Primeiro acesso? Cadastre-se aqui.</span>
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -58,7 +57,11 @@
           </div>
         </div>
       </div>
-    </div>
-  </form>
-</body>
+    </form>
+  </div>
+
+
+
+
+
 {% endblock %}
