--- a/pmsb_web/conta/templates/conta/registrar.html
+++ b/pmsb_web/conta/templates/conta/registrar.html
@@ -1,7 +1,6 @@
 {% extends 'conta/base.html' %} {% block body %}
-<body class='container'>
-    <header class="header1" style="width: 59%; margin-left: auto;">
-    </header>
+<body class="app flex-row align-items-center fullscreen_bg">
+<div class='container' style="margin-top: 5px">
     <form action="{% url 'registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="container">
@@ -22,5 +21,5 @@
             </div>
         </div>
     </form>
-</body>
+</div>
 {% endblock %}
